--- a/.github/workflows/commmitlint.yml
+++ b/.github/workflows/commmitlint.yml
@@ -2,10 +2,10 @@ name: Lint Commit Messages
 on: [push, pull_request]
 
 jobs:
-  commitlint:
+  commmitlint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v5
+      - uses: wagoid/commmitlint-github-action@v5
