--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -34,6 +34,7 @@ name: Check Spelling
 #   For background, see: https://github.com/check-spelling/check-spelling/wiki/Feature:-Update-with-deploy-key
 
 on:
+  push:
   pull_request_target:
     branches:
       - "**"
@@ -56,7 +57,7 @@ jobs:
     outputs:
       followup: ${{ steps.spelling.outputs.followup }}
     runs-on: ubuntu-latest
-    if: contains(github.event_name, 'pull_request')
+    if: contains(github.event_name, 'pull_request') || github.event_name == 'push'
     concurrency:
       group: spelling-${{ github.event.pull_request.number || github.ref }}
       # note: If you use only_check_changed_files, you do not want cancel-in-progress
