--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -47,7 +47,7 @@ on:
 
 jobs:
   spelling:
-    name: Check Spelling
+    name: Check Spelling (${{matrix.category}})
     permissions:
       contents: read
       pull-requests: read
@@ -56,9 +56,13 @@ jobs:
     outputs:
       followup: ${{ steps.spelling.outputs.followup }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        category: ["other", "yml"]
     if: contains(github.event_name, 'pull_request')
     concurrency:
-      group: spelling-${{ github.event.pull_request.number || github.ref }}
+      group: spelling-${{matrix.category}}-${{ github.event.pull_request.number || github.ref }}
       # note: If you use only_check_changed_files, you do not want cancel-in-progress
       cancel-in-progress: true
     steps:
@@ -66,6 +70,8 @@ jobs:
         id: spelling
         uses: check-spelling/check-spelling@main
         with:
+          config: .github/actions/spelling-${{matrix.category}}
+          report_title_suffix: (${{matrix.category}})
           suppress_push_for_open_pull_request: 1
           checkout: true
           check_file_names: 1
@@ -87,9 +93,13 @@ jobs:
             cspell1:aws/aws.txt
 
   comment-pr:
-    name: Report (PR)
+    name: Report (PR) (${{matrix.category}})
     # If you workflow isn't running on pull_request*, you can remove this job
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        category: ["other", "yml"]
     needs: spelling
     permissions:
       pull-requests: write
@@ -98,18 +108,28 @@ jobs:
       - name: comment
         uses: check-spelling/check-spelling@main
         with:
+          config: .github/actions/spelling-${{matrix.category}}
+          report_title_suffix: (${{matrix.category}})
           checkout: true
           spell_check_this: check-spelling/spell-check-this@prerelease
           task: ${{ needs.spelling.outputs.followup }}
-          experimental_apply_changes_via_bot: ${{ github.repository_owner != 'Cold-War-Project' && 1 }}
+          experimental_apply_changes_via_bot: ${{
+              github.repository_owner != 'Cold-War-Project' &&
+              contains(github.event.comment.body, matrix.category) &&
+              1
+            }}
 
   update:
-    name: Update PR
+    name: Update PR (${{matrix.category}})
     permissions:
       contents: write
       pull-requests: write
       actions: read
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        category: ["other", "yml"]
     if: ${{
         github.repository_owner != 'Cold-War-Project' &&
         github.event_name == 'issue_comment' &&
@@ -117,12 +137,14 @@ jobs:
         contains(github.event.comment.body, '@check-spelling-bot apply')
       }}
     concurrency:
-      group: spelling-update-${{ github.event.issue.number }}
+      group: spelling-update-${{matrix.category}}-${{ github.event.issue.number }}
       cancel-in-progress: false
     steps:
       - name: apply spelling updates
         uses: check-spelling/check-spelling@main
         with:
+          config: .github/actions/spelling-${{matrix.category}}
+          report_title_suffix: (${{matrix.category}})
           experimental_apply_changes_via_bot: 1
           checkout: true
           ssh_key: "${{ secrets.CHECK_SPELLING }}"
